removed instances of List.of() (java 9, not 8)